--- a/Assignment4/Q5.html
+++ b/Assignment4/Q5.html
@@ -18,7 +18,7 @@
         <input type="text" id="address" name="address" required><br><br>
 
         <label for="product">Product:</label>
-        <select id="product" name="product" onchange="calculateTotalPrice()" required>
+        <select id="product" name="product" required>
             <option value="" disabled selected>Select a product</option>
             <option value="10">Product A - $10</option>
             <option value="20">Product B - $20</option>
@@ -26,7 +26,7 @@
         </select><br><br>
 
         <label for="quantity">Quantity:</label>
-        <input type="number" id="quantity" name="quantity" min="1" value="1" onchange="calculateTotalPrice()" required><br><br>
+        <input type="number" id="quantity" name="quantity" min="1" value="1" required><br><br>
 
         <label>Delivery Preferences:</label><br>
         <input type="radio" id="standard" name="delivery" value="Standard" required>
@@ -34,30 +34,9 @@
         <input type="radio" id="express" name="delivery" value="Express">
         <label for="express">Express</label><br><br>
 
-        <label for="coupon">Apply Coupon:</label>
-        <input type="text" id="coupon" name="coupon">
-        <button type="button" onclick="applyCoupon()">Apply</button><br><br>
 
-        <p>Total Price: $<span id="total-price">0</span></p>
         <button type="submit">Submit</button>
     </form>
 
-    <script>
-        function calculateTotalPrice() {
-            const productPrice = parseFloat(document.getElementById('product').value) || 0;
-            const quantity = parseInt(document.getElementById('quantity').value) || 0;
-            const totalPrice = productPrice * quantity;
-            document.getElementById('total-price').innerText = totalPrice.toFixed(2);
-        }
-
-        function applyCoupon() {
-            const coupon = document.getElementById('coupon').value;
-            let totalPrice = parseFloat(document.getElementById('total-price').innerText) || 0;
-            if (coupon === "DISCOUNT10") {
-                totalPrice *= 0.9;
-            }
-            document.getElementById('total-price').innerText = totalPrice.toFixed(2);
-        }
-    </script>
 </body>
 </html>
